--- a/base/2018_19_final/question_02.Rmd
+++ b/base/2018_19_final/question_02.Rmd
@@ -24,3 +24,7 @@ exname: instrument
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: TS
