--- a/base/2018_19_final/question_05.Rmd
+++ b/base/2018_19_final/question_05.Rmd
@@ -20,3 +20,7 @@ exname: constant_factors
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Coefficients interpretation
