--- a/base/2018_19_final/question_10.Rmd
+++ b/base/2018_19_final/question_10.Rmd
@@ -27,3 +27,7 @@ exname: lr_test
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: Maximum Likelihood/LR test
