--- a/base/2018_19_final/question_03.Rmd
+++ b/base/2018_19_final/question_03.Rmd
@@ -20,3 +20,7 @@ exname: stationarity
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: TS/Stationarity
