--- a/base/2018_19_final/question_04.Rmd
+++ b/base/2018_19_final/question_04.Rmd
@@ -22,3 +22,7 @@ exname: df_test
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: TS/Unit root test/Dickey Fuller test
