--- a/base/2018_19_final/question_06.Rmd
+++ b/base/2018_19_final/question_06.Rmd
@@ -23,3 +23,7 @@ exname: cointegration
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: TS/Stationarity
