--- a/base/2018_19_final/question_07.Rmd
+++ b/base/2018_19_final/question_07.Rmd
@@ -21,3 +21,7 @@ exname: adapt_model
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: TS
