--- a/base/2018_19_final/question_08.Rmd
+++ b/base/2018_19_final/question_08.Rmd
@@ -22,3 +22,7 @@ exname: adjusted_r2
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/R2
