--- a/base/2018_19_final/question_09.Rmd
+++ b/base/2018_19_final/question_09.Rmd
@@ -2,7 +2,7 @@ Question
 ========
 В предположениях нормальности ошибок ширина 95\%-го интервала для ожидаемого (среднего) значения $Y_{n+1}$ равна $1200$. 
 Известно, что $\hat\sigma = 400$ и $n=60$. 
-Ширина 95\%-го интервала для фактического (индивидального) значения $Y_{n+1}$ примерно равна 
+Ширина 95\%-го интервала для фактического (индивидуального) значения $Y_{n+1}$ примерно равна 
 
 
 Answerlist
@@ -23,3 +23,7 @@ exname: predictive
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Point forecast
