--- a/base/2018_19_kr1/question_04.Rmd
+++ b/base/2018_19_kr1/question_04.Rmd
@@ -23,3 +23,7 @@ exname: hat_var_hat_beta
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Sum of squares
