--- a/base/2018_19_kr1/question_08.Rmd
+++ b/base/2018_19_kr1/question_08.Rmd
@@ -24,3 +24,7 @@ exname: ci_beta_x
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Coefficient confidence interval
