--- a/base/2018_19_kr1/question_01.Rmd
+++ b/base/2018_19_kr1/question_01.Rmd
@@ -30,3 +30,7 @@ exname: distribution_discrete
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: Distribution
