--- a/base/2018_19_kr1/question_03.Rmd
+++ b/base/2018_19_kr1/question_03.Rmd
@@ -22,3 +22,7 @@ exname: r2_formula
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/R2
