--- a/base/2018_19_kr1/question_05.Rmd
+++ b/base/2018_19_kr1/question_05.Rmd
@@ -23,3 +23,7 @@ exname: sum_of_estimates
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Coefficients formula
