--- a/base/2018_19_kr1/question_06.Rmd
+++ b/base/2018_19_kr1/question_06.Rmd
@@ -22,3 +22,7 @@ exname: update_x_y
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Coefficients interpretation
