--- a/base/2018_19_kr1/question_07.Rmd
+++ b/base/2018_19_kr1/question_07.Rmd
@@ -22,3 +22,7 @@ exname: distribution
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Coefficient t-test
