--- a/base/2018_19_kr1/question_09.Rmd
+++ b/base/2018_19_kr1/question_09.Rmd
@@ -21,3 +21,7 @@ exname: vector_formula
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Coefficients formula
