--- a/base/2018_19_kr3/question_01.Rmd
+++ b/base/2018_19_kr3/question_01.Rmd
@@ -22,3 +22,7 @@ exname: homo_se_formula
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: Heteroskedasticity
