--- a/base/2018_19_kr3/question_02.Rmd
+++ b/base/2018_19_kr3/question_02.Rmd
@@ -22,3 +22,7 @@ exname: studentized_residuals
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Residuals
