--- a/base/2018_19_kr3/question_04.Rmd
+++ b/base/2018_19_kr3/question_04.Rmd
@@ -23,3 +23,7 @@ exname: lm_test_model
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: Maximum Likelihood/LM test
