--- a/base/2018_19_kr3/question_08.Rmd
+++ b/base/2018_19_kr3/question_08.Rmd
@@ -23,3 +23,7 @@ exname: correlated_x
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: Causality/Instrumental variables
