--- a/base/2018_19_kr3/question_09.Rmd
+++ b/base/2018_19_kr3/question_09.Rmd
@@ -21,3 +21,7 @@ exname: log_likelihood
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: Logit
