--- a/base/2018_19_kr3/question_10.Rmd
+++ b/base/2018_19_kr3/question_10.Rmd
@@ -25,3 +25,7 @@ exname: hetero
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: Heteroskedasticity/Robust standard errors
