--- a/base/2018_19_midterm/mi_01.Rmd
+++ b/base/2018_19_midterm/mi_01.Rmd
@@ -31,3 +31,7 @@ exname: mi_01_centered
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Coefficients formula
