--- a/base/2018_19_midterm/mi_05.Rmd
+++ b/base/2018_19_midterm/mi_05.Rmd
@@ -30,3 +30,7 @@ exname: mi_05_f_stat
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS
