--- a/base/2018_19_midterm/mi_08.Rmd
+++ b/base/2018_19_midterm/mi_08.Rmd
@@ -32,3 +32,7 @@ exname: mi_08_root_r
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/R2
