--- a/base/2018_19_midterm/mi_04.Rmd
+++ b/base/2018_19_midterm/mi_04.Rmd
@@ -30,3 +30,7 @@ exname: mi_04_short_model
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Coefficients interpretation
