--- a/base/2018_19_midterm/mi_06.Rmd
+++ b/base/2018_19_midterm/mi_06.Rmd
@@ -29,3 +29,7 @@ exname: mi_06_non_gm
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Gauss-Markov theorem
