--- a/base/2018_19_midterm/mi_09.Rmd
+++ b/base/2018_19_midterm/mi_09.Rmd
@@ -30,3 +30,7 @@ exname: mi_09_ramsey
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Sum of squares
