--- a/base/2018_19_midterm/mi_10.Rmd
+++ b/base/2018_19_midterm/mi_10.Rmd
@@ -38,3 +38,7 @@ exname: mi_10_dummy
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Dummy variables
