2016_final_spring_demo corrections

--- a/base/2016_final_spring_demo/3.Rmd
+++ b/base/2016_final_spring_demo/3.Rmd
@@ -25,7 +25,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 3
+exname: DW_autocorr
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: TS
