--- a/base/2016_final_spring_demo/4.Rmd
+++ b/base/2016_final_spring_demo/4.Rmd
@@ -24,7 +24,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 4
+exname: binary_models
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: Binary models
