--- a/base/2016_final_spring_demo/7.Rmd
+++ b/base/2016_final_spring_demo/7.Rmd
@@ -25,7 +25,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 7
+exname: ts_instruments
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: Causality/Instrumental variables
