--- a/base/2016_final_spring_demo/8.Rmd
+++ b/base/2016_final_spring_demo/8.Rmd
@@ -34,7 +34,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 8
+exname: linear_restrictions
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Nested models F-test
