2016_kr_02_midterm corrections

--- a/base/2016_kr_02_midterm/5.Rmd
+++ b/base/2016_kr_02_midterm/5.Rmd
@@ -30,7 +30,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 5
+exname: dummy
 extype: schoice
 exsolution: 100000
-exshuffle: 5
+exshuffle: 6
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Dummy variables
