--- a/base/2016_kr_02_midterm/1.Rmd
+++ b/base/2016_kr_02_midterm/1.Rmd
@@ -29,7 +29,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 1
+exname: rss
 extype: schoice
 exsolution: 100000
-exshuffle: 5
+exshuffle: 6
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Sum of squares
