--- a/base/2016_kr_02_midterm/2.Rmd
+++ b/base/2016_kr_02_midterm/2.Rmd
@@ -28,7 +28,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 2
+exname: box_cox
 extype: schoice
 exsolution: 100000
-exshuffle: 5
+exshuffle: 6
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Gauss-Markov theorem
