--- a/base/2016_kr_02_midterm/4.Rmd
+++ b/base/2016_kr_02_midterm/4.Rmd
@@ -28,7 +28,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 4
+exname: f_test
 extype: schoice
 exsolution: 100000
-exshuffle: 5
+exshuffle: 6
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Linear restrictions
