--- a/base/2016_kr_02_midterm/9.Rmd
+++ b/base/2016_kr_02_midterm/9.Rmd
@@ -26,7 +26,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 9
+exname: MacKinnon_test
 extype: schoice
 exsolution: 100000
-exshuffle: 5
+exshuffle: 6
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Model selection
