--- a/base/2016_kr_03/7.Rmd
+++ b/base/2016_kr_03/7.Rmd
@@ -33,7 +33,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 7
+exname: ml_estimates
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: Maximum Likelihood
