--- a/base/2016_kr_03/3.Rmd
+++ b/base/2016_kr_03/3.Rmd
@@ -30,7 +30,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 3
+exname: ml_variance
 extype: schoice
 exsolution: 100000
-exshuffle: 5
+exshuffle: 6
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: Maximum Likelihood
