--- a/base/2016_kr_03/8.Rmd
+++ b/base/2016_kr_03/8.Rmd
@@ -34,7 +34,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 8
+exname: homoscedastic_errors
 extype: schoice
 exsolution: 100000
-exshuffle: 5
+exshuffle: 6
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: Heteroskedasticity
