2016_kr_04_final corrections

--- a/base/2016_kr_04_final/10.Rmd
+++ b/base/2016_kr_04_final/10.Rmd
@@ -35,7 +35,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 10
+exname: coefficients_intervals
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Coefficient confidence interval
