--- a/base/2016_kr_04_final/8.Rmd
+++ b/base/2016_kr_04_final/8.Rmd
@@ -24,7 +24,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 8
+exname: white_noise
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: TS/Stationarity
