--- a/base/2016_kr_04_final/2.Rmd
+++ b/base/2016_kr_04_final/2.Rmd
@@ -25,7 +25,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 2
+exname: 2sls_instruments
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: Causality/2SLS
