--- a/base/2016_kr_04_final/3.Rmd
+++ b/base/2016_kr_04_final/3.Rmd
@@ -25,7 +25,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 3
+exname: gls
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: GLS
