--- a/base/2016_kr_04_final/4.Rmd
+++ b/base/2016_kr_04_final/4.Rmd
@@ -24,7 +24,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 4
+exname: panel_fe_re
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: Panel Models
