--- a/base/2016_kr_04_final/9.Rmd
+++ b/base/2016_kr_04_final/9.Rmd
@@ -24,7 +24,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 9
+exname: white_errors
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: Heteroskedasticity/Robust standard errors
