--- a/base/2016_kr_03/4.Rmd
+++ b/base/2016_kr_03/4.Rmd
@@ -1,6 +1,6 @@
 Question
 ========
-
+Метод максимального правдоподобия для оценки коэффициентов регрессии $Y = X\beta  + \varepsilon$ НЕ МОЖЕТ быть применён, если
 
 Answerlist
 ----------
@@ -23,7 +23,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 4
+exname: ml_application
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: Maximum Likelihood
