--- a/base/2016_kr_03/5.Rmd
+++ b/base/2016_kr_03/5.Rmd
@@ -1,9 +1,10 @@
 Question
 ========
-
+При наличии сильной практической мультиколлинеарности нарушается следующее свойство МНК-оценок параметров классической регрессии:
 
 Answerlist
 ----------
+*  единственных оценок МНК не существует
 *  линейность по зависимой переменой
 *  несмещённость
 *  эффективность в классе линейных и несмещенных оценок
@@ -14,6 +15,7 @@ Solution
 
 Answerlist
 ----------
+*  Good answer :)
 *  Bad answer :(
 *  Bad answer :(
 *  Bad answer :(
@@ -21,7 +23,12 @@ Answerlist
 
 Meta-information
 ================
-exname: 5
+exname: multicol
 extype: schoice
-exsolution: 0000
+exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: Multicollinearity
+
