--- a/base/2017_kr_01/1.Rmd
+++ b/base/2017_kr_01/1.Rmd
@@ -37,7 +37,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 1
+exname: expected_value
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: Moments
