--- a/base/2017_kr_01/10.Rmd
+++ b/base/2017_kr_01/10.Rmd
@@ -26,7 +26,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 10
+exname: variance_estimation
 extype: schoice
 exsolution: 100000
-exshuffle: 5
+exshuffle: 6
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Sum of squares
