--- a/base/2017_kr_01/5.Rmd
+++ b/base/2017_kr_01/5.Rmd
@@ -24,7 +24,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 5
+exname: ols_assumptions
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS
