--- a/base/2017_kr_01/7.Rmd
+++ b/base/2017_kr_01/7.Rmd
@@ -5,7 +5,6 @@ Question
 
 Answerlist
 ----------
-*  нет верного ответа
 *  соответствующий коэффициент не значим при уровне значимости 5\%
 *  соответствующий коэффициент значим при уровне значимости 1\%
 *  длина 95\% доверительного интервала для этого коэффициента равна 0.07
@@ -18,7 +17,6 @@ Solution
 Answerlist
 ----------
 *  Good answer :)
-*  Good answer :)
 *  Bad answer :(
 *  Bad answer :(
 *  Bad answer :(
@@ -26,7 +24,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 7
+exname: p_value
 extype: schoice
-exsolution: 110000
+exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Coefficient t-test
