--- a/base/2017_kr_02_midterm/10.Rmd
+++ b/base/2017_kr_02_midterm/10.Rmd
@@ -40,7 +40,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 10
+exname: r_sq_adj
 extype: schoice
 exsolution: 100000
-exshuffle: 5
+exshuffle: 6
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/R2
