--- a/base/2017_kr_02_midterm/5.Rmd
+++ b/base/2017_kr_02_midterm/5.Rmd
@@ -29,7 +29,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 5
+exname: dummy
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Dummy variables
