--- a/base/2017_kr_02_midterm/8.Rmd
+++ b/base/2017_kr_02_midterm/8.Rmd
@@ -27,7 +27,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 8
+exname: 2models_coefficients
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Linear restrictions
