--- a/base/2017_kr_02_midterm/9.Rmd
+++ b/base/2017_kr_02_midterm/9.Rmd
@@ -30,7 +30,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 9
+exname: ci_95
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Coefficient confidence interval
