--- a/base/2017_kr_02_midterm/1.Rmd
+++ b/base/2017_kr_02_midterm/1.Rmd
@@ -25,7 +25,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 1
+exname: ols_covar
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS
