--- a/base/2017_kr_02_midterm/2.Rmd
+++ b/base/2017_kr_02_midterm/2.Rmd
@@ -24,7 +24,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 2
+exname: f_stat
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/R2
