--- a/base/2017_kr_02_midterm/6.Rmd
+++ b/base/2017_kr_02_midterm/6.Rmd
@@ -58,7 +58,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 6
+exname: model_choice_tests
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Model selection
