--- a/base/2017_kr_02_midterm/7.Rmd
+++ b/base/2017_kr_02_midterm/7.Rmd
@@ -31,7 +31,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 7
+exname: 2models_restrictions
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Linear restrictions
