2017_kr_04_final corrections

--- a/base/2017_kr_04_final/1.Rmd
+++ b/base/2017_kr_04_final/1.Rmd
@@ -1,6 +1,6 @@
 Question
 ========
-Для набора панельных данных истинна спецификация модели со случайными эффектами, однако Вовочка оценивает модель с фиксированными эффектами. Вовочкины ценки коэффициентов $\beta$ окажутся
+Для набора панельных данных истинна спецификация модели со случайными эффектами, однако Вовочка оценивает модель с фиксированными эффектами. Вовочкины оценки коэффициентов $\beta$ окажутся
 
 
 
@@ -25,7 +25,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 1
+exname: fe_or_re
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: Panel Models
