--- a/base/2017_kr_04_final/6.Rmd
+++ b/base/2017_kr_04_final/6.Rmd
@@ -26,7 +26,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 6
+exname: error_correction_model
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: TS
