--- a/base/2017_kr_04_final/9.Rmd
+++ b/base/2017_kr_04_final/9.Rmd
@@ -29,3 +29,7 @@ exname: 9
 extype: schoice
 exsolution: 00000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: TS/Stationarity
