--- a/base/2017_kr_04_final/10.Rmd
+++ b/base/2017_kr_04_final/10.Rmd
@@ -28,7 +28,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 10
+exname: dw
 extype: schoice
 exsolution: 100000
-exshuffle: 5
+exshuffle: 6
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: TS/Autocorrelation function
