--- a/base/2017_kr_04_final/5.Rmd
+++ b/base/2017_kr_04_final/5.Rmd
@@ -25,7 +25,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 5
+exname: autocorr_function
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: TS/Autocorrelation function
