--- a/base/2017_kr_04_final/9.Rmd
+++ b/base/2017_kr_04_final/9.Rmd
@@ -6,17 +6,19 @@ Question
 
 Answerlist
 ----------
-*  Он является стационарным в узком смысле
-*  Для него выполняется основная гипотеза в тесте Дикки-Фуллера
-*  Его автоковариационная функция является постоянной
-*  Это белый шум
-*  Это AR процесс с корнями характеристического уравнения, меньшими 1
+* его приращения являются стационарным процессом
+* он является стационарным в узком смысле
+* для него выполняется основная гипотеза в тесте Дикки-Фуллера
+* его автоковариационная функция является постоянной
+* это белый шум
+* это AR процесс с корнями характеристического уравнения, меньшими 1
 
 Solution
 ========
 
 Answerlist
 ----------
+*  Good answer :)
 *  Bad answer :(
 *  Bad answer :(
 *  Bad answer :(
@@ -25,10 +27,10 @@ Answerlist
 
 Meta-information
 ================
-exname: 9
+exname: weak stationarity leads to
 extype: schoice
-exsolution: 00000
-exshuffle: 5
+exsolution: 100000
+exshuffle: 6
 exextra[Type]: Calculation
 exextra[Language]: Russian
 exextra[Level]: Literacy
