--- a/base/2016_kr_01/1.Rmd
+++ b/base/2016_kr_01/1.Rmd
@@ -27,7 +27,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 1
+exname: covariance_calculation
 extype: schoice
 exsolution: 100000
-exshuffle: 5
+exshuffle: 6
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: Moments
