--- a/base/2016_kr_01/10.Rmd
+++ b/base/2016_kr_01/10.Rmd
@@ -26,7 +26,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 10
+exname: h0 hypothesis
 extype: schoice
 exsolution: 100000
-exshuffle: 5
+exshuffle: 6
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Coefficient t-test
