--- a/base/2016_kr_01/11.Rmd
+++ b/base/2016_kr_01/11.Rmd
@@ -26,7 +26,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 11
+exname: programs
 extype: schoice
 exsolution: 100000
-exshuffle: 5
+exshuffle: 6
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: Others
