--- a/base/2016_kr_01/7.Rmd
+++ b/base/2016_kr_01/7.Rmd
@@ -27,7 +27,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 7
+exname: bias
 extype: schoice
 exsolution: 100000
-exshuffle: 5
+exshuffle: 6
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Gauss-Markov theorem
