--- a/base/2016_kr_01/8.Rmd
+++ b/base/2016_kr_01/8.Rmd
@@ -27,7 +27,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 8
+exname: variance calculations
 extype: schoice
 exsolution: 100000
-exshuffle: 5
+exshuffle: 6
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Sum of squares
