--- a/base/2016_kr_02_midterm_demo/4.Rmd
+++ b/base/2016_kr_02_midterm_demo/4.Rmd
@@ -26,7 +26,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 4
+exname: price elastisity
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Coefficients interpretation
