--- a/base/2016_kr_02_midterm_demo/2.Rmd
+++ b/base/2016_kr_02_midterm_demo/2.Rmd
@@ -26,7 +26,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 2
+exname: r_sq formula
 extype: schoice
 exsolution: 100000
-exshuffle: 5
+exshuffle: 6
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/R2
