--- a/base/2016_kr_02_midterm_demo/8.Rmd
+++ b/base/2016_kr_02_midterm_demo/8.Rmd
@@ -35,7 +35,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 8
+exname: model selection
 extype: schoice
 exsolution: 100000
-exshuffle: 5
+exshuffle: 6
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Model selection
