--- a/base/2016_kr_02_midterm_demo/9.Rmd
+++ b/base/2016_kr_02_midterm_demo/9.Rmd
@@ -25,7 +25,11 @@ Answerlist
 
 Meta-information
 ================
-exname: 9
+exname: ci
 extype: schoice
 exsolution: 10000
 exshuffle: 5
+exextra[Type]: Calculation
+exextra[Language]: Russian
+exextra[Level]: Literacy
+exsection: OLS/Coefficient confidence interval
